Document Organikk encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -226,7 +226,10 @@ items:
           -
             url: winglade
             name: Winglade
-          # Organikk, Wicabel, Sound of Justice
+          -
+            url: organikk
+            name: Organikk
+          # Wicabel, Sound of Justice
       -
         name: 3rd Sanctuary
         sublist:
