--- a/encounters/index.html
+++ b/encounters/index.html
@@ -229,7 +229,10 @@ items:
           -
             url: organikk
             name: Organikk
-          # Wicabel, Sound of Justice
+          -
+            url: wicabel
+            name: Wicabel
+          # Sound of Justice
       -
         name: 3rd Sanctuary
         sublist:
