Document Guei encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -206,7 +206,9 @@ items:
       -
         name: Dark Sanctuary
         sublist:
-          # Guei
+          -
+            url: guei
+            name: Guei
           -
             url: balthizard
             name: Balthizard
