S.Neo enc: Fix unused Throw helper name

--- a/encounters/spamtonneo.html
+++ b/encounters/spamtonneo.html
@@ -464,7 +464,7 @@ toc:
 
 <section class="d-section" id="throw">
 	<h2>{% include acticon chara="Susie" -%} Unused ACT</h2>
-	<p>Flavor text for a combination ACT with Ralsei, likely named "Throw" given the similarity of the flavor text to <a href="{{ '/encounters/werewire#throw' | relative_url }}">Werewire's Throw ACT</a>. Would probably have been identical in function.</p>
+	<p>Flavor text for a combination ACT with Susie, likely named "Throw" given the similarity of the flavor text to <a href="{{ '/encounters/werewire#throw' | relative_url }}">Werewire's Throw ACT</a>. Would probably have been identical in function.</p>
 
 	<h3>Instructions</h3>
 	<d-box theme="battlemenu">
