Document Titan encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -241,7 +241,9 @@ items:
           -
             url: titanspawn
             name: Titan Spawn
-          # Titan
+          -
+            url: titan
+            name: Titan
   -
     id: other
     name: Other
