Ambyulance: Simul-group the UltHeal dialogue

--- a/encounters/ambyulance.html
+++ b/encounters/ambyulance.html
@@ -216,17 +216,21 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<hr>
 
 	<h3 id="dialogue-ultimateheal">After Susie uses Ultimate Heal</h3>
-	<h4>First/third Ambyu-Lances in the encounter</h4>
-	<d-box theme="battletalk">
-		<d-speaker>Ambyu-Lance</d-speaker>
-		<d-text>(That's the worst<span class="break"></span> healing I've seen)</d-text>
-	</d-box>
-
-	<h4>Second Ambyu-Lance in the encounter</h4>
-	<d-box theme="battletalk">
-		<d-speaker>Ambyu-Lance</d-speaker>
-		<d-text>(Is she charging<span class="break"></span> for that?)</d-text>
-	</d-box>
+	<p class="note">In the below dialogue, the speech bubbles appear for the Ambyu-Lances in enemy slot 1, 2, and 3, respectively. If there is no enemy in that slot, or the enemy is not an Ambyu-Lance, the corresponding dialogue does not play.</p>
+	<div class="boxgroup">
+		<d-box theme="battletalk">
+			<d-speaker>Ambyu-Lance</d-speaker>
+			<d-text>(That's the worst<span class="break"></span> healing I've seen)</d-text>
+		</d-box>
+		<d-box theme="battletalk">
+			<d-speaker>Ambyu-Lance</d-speaker>
+			<d-text>(Is she charging<span class="break"></span> for that?)</d-text>
+		</d-box>
+		<d-box theme="battletalk">
+			<d-speaker>Ambyu-Lance</d-speaker>
+			<d-text>(That's the worst<span class="break"></span> healing I've seen)</d-text>
+		</d-box>
+	</div>
 </section>
 
 <section class="d-section" id="check">
