Knight enc: Fix specific attack FT anchor

--- a/encounters/knight.html
+++ b/encounters/knight.html
@@ -57,7 +57,7 @@ toc:
 <section class="d-section" id="flavortext">
 	<h2>General flavor text</h2>
 	
-	<h3 id="ft-specific">With specific attacks</h3>
+	<h3 id="ft-attack">With specific attacks</h3>
 	<p>The attack rotation and therefore the accompanying flavor text is largely scripted. Unless overridden by <a href="#ft-downed">flavor text for downed party members</a>, the below lines play out sequentially. (See the <a href="{% include wikilink page='Knight#Attacks' %}">Deltarune Wiki</a> for descriptions of each attack.)</p>
 
 	<h4 id="starstorm1">Initial encounter (Phase 1, Star Storm)</h4>
