Document Sound of Justice encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -234,7 +234,9 @@ items:
           -
             url: wicabel
             name: Wicabel
-          # Sound of Justice
+          -
+            url: soundofjustice
+            name: Sound of Justice
       -
         name: 3rd Sanctuary
         sublist:
