DW items: Add Ralsei Tea ch4 update

--- a/misc/darkitems.html
+++ b/misc/darkitems.html
@@ -39,6 +39,10 @@ sources:
     chapters: [1, 2, 3, 4]
     note: combat usage effects
   -
+    name: gml_GlobalScript_scr_teaamount
+    chapters: [1, 2, 3, 4]
+    note: Tea healing amounts
+  -
     name: gml_Object_obj_darkcontroller_Step_0
     chapters: [1]
     note: Manual toss text
@@ -1336,7 +1340,7 @@ toc:
 	</d-box>
 
 	<h4>Ralsei</h4>
-	<p class="note">Heals 120 HP.</p>
+	<p class="note">Heals 60 HP. (Would have healed 100 HP in Chapter 4 after <a href="{{ '/chapters/chapter4/lastprophecy#smiling' | relative_url }}">telling Ralsei it's okay not to smile</a>, but by the time you reach said chapter this item has been replaced by <a href="#rottentea">Rotten Tea</a>, so the updated healing amount is unseen in-game.)</p>
 	<d-box theme="objreact">
 		<d-speaker>Ralsei</d-speaker>
 		<d-text>Tastes like blueberries!</d-text>
