Document Miss Mizzle encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -221,7 +221,10 @@ items:
           -
             url: mizzle
             name: Mizzle
-          # Miss Mizzle, Hammer of Justice
+          -
+            url: missmizzle
+            name: Miss Mizzle
+          # Hammer of Justice
       -
         name: 2nd Sanctuary
         sublist:
