Use arrow brackets for substituted text
Also allowed </> in d-options for easier substitution

--- a/encounters/clover.html
+++ b/encounters/clover.html
@@ -469,7 +469,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<h3 id="manual-ft">Flavor text</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] read the MANUAL!</d-text>
+		<d-text asterisk>&lt;Character&gt; read the MANUAL!</d-text>
 	</d-box>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Clover became sentimental!</d-text>
