--- a/encounters/dummy.html
+++ b/encounters/dummy.html
@@ -925,7 +925,7 @@ god this page is messy as hell. feel free to clean it up
 
 <section class="d-section" id="item">
 	<h2>Using an item</h2>
-	<p class="note">In all cases, the standard item usage narration ("Kris used [ITEM]!" and variations thereof) plays first.</p>
+	<p class="note">In all cases, the standard item usage narration ("Kris used &lt;ITEM&lt;!" and variations thereof) plays first.</p>
 
 	<h3>First time</h3>
 	<d-box theme="battlemenu">
@@ -1047,7 +1047,7 @@ god this page is messy as hell. feel free to clean it up
 
 	<hr>
 
-	<p>Intended for standard flavor text; probably replaced by the more specific "Let's try [OPTION]!" messages.</p>
+	<p>Intended for standard flavor text; probably replaced by the more specific "Let's try &lt;OPTION&gt;!" messages.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Ralsei looks on expectedly.</d-text>
 	</d-box>
