--- a/encounters/kroundcardcastle.html
+++ b/encounters/kroundcardcastle.html
@@ -211,7 +211,7 @@ toc:
 		{% include acticon chara="Susie" -%} {% include acticon chara="Ralsei" -%} Throw
 	</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>The crown is <span class="yellow">[NUMBER]-percent</span> loose!</d-text>
+		<d-text asterisk>The crown is <span class="yellow">&lt;NUMBER&gt;-percent</span> loose!</d-text>
 	</d-box>
 
 	<hr>
