--- a/encounters/kroundgreatboard.html
+++ b/encounters/kroundgreatboard.html
@@ -225,7 +225,7 @@ toc:
 
 	<h3 id="ft-postbow">After Bow / {% include acticon chara="Ralsei" -%} Deep Bow</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>The crown is <span class="yellow">[NUMBER]-percent</span> loose!</d-text>
+		<d-text asterisk>The crown is <span class="yellow">&lt;NUMBER&gt;-percent</span> loose!</d-text>
 	</d-box>
 
 	<hr>
