--- a/misc/darkitems.html
+++ b/misc/darkitems.html
@@ -4,7 +4,7 @@ title: Dark World items
 description: >
   <p>Descriptions and usage/toss text for Dark World items.</p>
   <p>For overworld usage, reactions from characters on whom the item is not being used occur only if that character is also in the party at time of use.</p>
-  <p>Usage messages including "[Character]" can substitute the names "Kris"/"Susie"/"Ralsei"/"Noelle", depending on who the item was used on.</p>
+  <p>Usage messages including "&lt;Character&gt;" can substitute the names "Kris"/"Susie"/"Ralsei"/"Noelle", depending on who the item was used on.</p>
   <p>Any heal amounts listed on this page are the base values, not adjusted by heal-buffing equipment like the Blue Ribbon.</p>
 
 sources:
@@ -349,7 +349,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the DARK CANDY!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the DARK CANDY!</d-text>
 	</d-box>
 	<p class="note">Heals 40 HP.</p>
 </section>
@@ -401,7 +401,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the DARKER CANDY!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the DARKER CANDY!</d-text>
 	</d-box>
 	<p class="note">Heals 120 HP.</p>
 </section>
@@ -459,11 +459,11 @@ toc:
 	<p class="note">Revives a downed party member at max HP, or heals a non-downed party member for 50% HP.</p>
 	<h4>Chapter 1</h4>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the REVIVE MINT!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the REVIVE MINT!</d-text>
 	</d-box>
 	<h4>Chapter 2 onwards</h4>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the REVIVEMINT!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the REVIVEMINT!</d-text>
 	</d-box>
 </section>
 
@@ -499,7 +499,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the GLOWSHARD!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the GLOWSHARD!</d-text>
 	</d-box>
 
 	<h4>Standard</h4>
@@ -547,7 +547,7 @@ toc:
 	<h3>Usage (in battle)</h3>
 	<p class="note">In all cases, the Manual remains in the inventory after use.</p>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] read the MANUAL!</d-text>
+		<d-text asterisk>&lt;Character&gt; read the MANUAL!</d-text>
 	</d-box>
 
 	<h4>Standard</h4>
@@ -665,7 +665,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the BROKEN CAKE!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the BROKEN CAKE!</d-text>
 	</d-box>
 	<p class="note">Heals 20 HP.</p>
 </section>
@@ -707,7 +707,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the TOPCAKE!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the TOPCAKE!</d-text>
 	</d-box>
 	<p class="note">Heals all party members for 160 HP.</p>
 </section>
@@ -788,7 +788,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the SPINCAKE!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the SPINCAKE!</d-text>
 	</d-box>
 	<p class="note">Heals all party members for 80 HP (Chapter 1) / 140 HP (Chapter 2 onwards).</p>
 </section>
@@ -836,7 +836,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the DARKBURGER!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the DARKBURGER!</d-text>
 	</d-box>
 	<p class="note">Heals 70 HP.</p>
 </section>
@@ -890,7 +890,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the LANCERCOOKIE!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the LANCERCOOKIE!</d-text>
 	</d-box>
 	<p class="note">Heals 50 HP.</p>
 </section>
@@ -938,7 +938,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the GIGASALAD!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the GIGASALAD!</d-text>
 	</d-box>
 	<p class="note">Heals 4 HP.</p>
 </section>
@@ -987,7 +987,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the CLUBS SANDWICH!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the CLUBS SANDWICH!</d-text>
 	</d-box>
 	<p class="note">Heals all party members for 30 HP (Chapter 1) / 70 HP (Chapter 2 onwards).</p>
 </section>
@@ -1039,7 +1039,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the HEARTS DONUT!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the HEARTS DONUT!</d-text>
 	</d-box>
 	<h4>Chapter 1</h4>
 	<p class="note">Heals Kris for 10 HP, Susie for 90 HP, and Ralsei for 60 HP.</p>
@@ -1094,7 +1094,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the CHOCO DIAMOND!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the CHOCO DIAMOND!</d-text>
 	</d-box>
 	<h4>Chapter 1</h4>
 	<p class="note">Heals Kris for 80 HP, Susie for 30 HP, and Ralsei for 30 HP.</p>
@@ -1145,7 +1145,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the FAV SANDWICH!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the FAV SANDWICH!</d-text>
 	</d-box>
 	<p class="note">Heals 500 HP.</p>
 </section>
@@ -1195,12 +1195,12 @@ toc:
 	<h4>Chapter 1</h4>
 	<p>Note typo in "ROULXS".</p>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the ROULXS ROUX!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the ROULXS ROUX!</d-text>
 	</d-box>
 	<p class="note">Heals 60 HP.</p>
 	<h4>Chapter 2 onwards</h4>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the ROUXLS ROUX!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the ROUXLS ROUX!</d-text>
 	</d-box>
 	<p class="note">Heals 50 HP.</p>
 </section>
@@ -1253,7 +1253,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the CD BAGEL!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the CD BAGEL!</d-text>
 	</d-box>
 	<p class="note">Heals 80 HP.</p>
 </section>
@@ -1289,7 +1289,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the CLOTHESDOLL!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the CLOTHESDOLL!</d-text>
 	</d-box>
 	<d-box theme="battlemenu">
 		<d-text asterisk>... but nothing happened!</d-text>
@@ -1361,7 +1361,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the KRIS TEA!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the KRIS TEA!</d-text>
 	</d-box>
 	<p class="note">Heals the same amount as in the overworld, except for Kris, who is healed for 40 HP instead of 10.</p>
 </section>
@@ -1430,7 +1430,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the NOELLE TEA!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the NOELLE TEA!</d-text>
 	</d-box>
 	<p class="note">Heals the same amount as in the overworld, except for Noelle, who is healed for 40 HP instead of 10.</p>
 </section>
@@ -1495,7 +1495,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the RALSEI TEA!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the RALSEI TEA!</d-text>
 	</d-box>
 	<p class="note">Heals the same amount as in the overworld, except for Ralsei, who is healed for 40 HP instead of 10.</p>
 </section>
@@ -1560,7 +1560,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the SUSIE TEA!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the SUSIE TEA!</d-text>
 	</d-box>
 	<p class="note">Heals the same amount as in the overworld, except for Susie, who is healed for 40 HP instead of 10.</p>
 </section>
@@ -1607,7 +1607,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the ROTTEN TEA!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the ROTTEN TEA!</d-text>
 	</d-box>
 	<p class="note">Heals 10 HP.</p>
 </section>
@@ -1656,7 +1656,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the DD-BURGER!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the DD-BURGER!</d-text>
 	</d-box>
 	<p class="note">Heals 60 HP.</p>
 </section>
@@ -1705,7 +1705,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the LIGHTCANDY!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the LIGHTCANDY!</d-text>
 	</d-box>
 	<p class="note">Heals 120 HP.</p>
 </section>
@@ -1754,7 +1754,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the BUTJUICE!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the BUTJUICE!</d-text>
 	</d-box>
 	<p class="note">Heals 100 HP.</p>
 </section>
@@ -1796,7 +1796,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the SPAGHETTICODE!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the SPAGHETTICODE!</d-text>
 	</d-box>
 	<p class="note">Heals all party members for 30 HP.</p>
 </section>
@@ -1848,7 +1848,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the JAVACOOKIE!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the JAVACOOKIE!</d-text>
 	</d-box>
 	<p class="note">Heals 90 HP, except for Kris, who is healed for 100 HP.</p>
 </section>
@@ -1884,7 +1884,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the TENSIONBIT!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the TENSIONBIT!</d-text>
 		<d-text asterisk>Tension raised up earlier.</d-text>
 	</d-box>
 	<p class="note">32% TP is added to TP Gauge.</p>
@@ -1921,7 +1921,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the TENSIONGEM!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the TENSIONGEM!</d-text>
 	</d-box>
 	<p class="note">50% TP is added to TP Gauge.</p>
 </section>
@@ -1957,7 +1957,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the TENSIONMAX!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the TENSIONMAX!</d-text>
 	</d-box>
 	<p class="note">TP Gauge is filled to 100%.</p>
 </section>
@@ -1999,7 +1999,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the REVIVEDUST!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the REVIVEDUST!</d-text>
 	</d-box>
 	<p class="note">Revives all downed party members at 25% HP, and heals non-downed party members for 10 HP.</p>
 </section>
@@ -2041,7 +2041,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the REVIVEBRIGHT!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the REVIVEBRIGHT!</d-text>
 	</d-box>
 	<p class="note">Revives all downed party members at max HP, and heals non-downed party members for 50 HP.</p>
 </section>
@@ -2089,7 +2089,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] administered S.POISON!</d-text>
+		<d-text asterisk>&lt;Character&gt; administered S.POISON!</d-text>
 	</d-box>
 	<p class="note">Heals 40 HP, then slowly deals 60 damage (1 per second), leaving the target at a minimum of 1 HP.</p>
 </section>
@@ -2123,7 +2123,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] admired DOGDOLLAR!</d-text>
+		<d-text asterisk>&lt;Character&gt; admired DOGDOLLAR!</d-text>
 	</d-box>
 	<p class="note">The Dog Dollar remains in the inventory.</p>
 </section>
@@ -2220,7 +2220,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the TVDINNER!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the TVDINNER!</d-text>
 	</d-box>
 	<p class="note">Heals 100 HP.</p>
 </section>
@@ -2296,7 +2296,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the PIPIS!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the PIPIS!</d-text>
 	</d-box>
 	<p class="note">The Pipis remains in the inventory.</p>
 </section>
@@ -2344,7 +2344,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the FLATSODA!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the FLATSODA!</d-text>
 	</d-box>
 	<p class="note">Heals 20 HP.</p>
 </section>
@@ -2392,7 +2392,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the TVSLOP!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the TVSLOP!</d-text>
 	</d-box>
 	<p class="note">Heals 80 HP.</p>
 </section>
@@ -2435,7 +2435,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the EXECBUFFET!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the EXECBUFFET!</d-text>
 	</d-box>
 	<p class="note">Heals all party members for 100 HP.</p>
 </section>
@@ -2484,7 +2484,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the DELUXEDINNER!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the DELUXEDINNER!</d-text>
 	</d-box>
 	<p class="note">Heals 140 HP.</p>
 </section>
@@ -2536,7 +2536,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the ANCIENTSWEET!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the ANCIENTSWEET!</d-text>
 	</d-box>
 	<p class="note">Heals Kris for 400 HP or other party members for 40 HP.</p>
 </section>
@@ -2583,7 +2583,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the RHAPSOTEA!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the RHAPSOTEA!</d-text>
 	</d-box>
 	<p class="note">Heals 115 HP.</p>
 </section>
@@ -2631,7 +2631,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the SCARLIXIR!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the SCARLIXIR!</d-text>
 	</d-box>
 	<p class="note">Heals the same amount as in the overworld. Notably, heal-buffing items like the <a href="{{ '/misc/armor#blueribbon' | relative_url }}">Blue Ribbon</a> don't buff Kris's 5 HP gain when the Scarlixir is used on Noelle.</p>
 </section>
@@ -2676,7 +2676,7 @@ toc:
 
 	<h3>Usage (in battle)</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the BITTERTEAR!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the BITTERTEAR!</d-text>
 	</d-box>
 	<p class="note">Heals 100% HP.</p>
 </section>
@@ -3347,11 +3347,10 @@ toc:
 	<p>These play only under special circumstances.</p>
 
 	<h3 id="hammerofjustice">Using items in the Hammer of Justice encounter (Chapter 4)</h3>
-	<p>Begins with the standard "[character] used [ITEM]" message for each item. For the <a href="#tensionbit">Tension Bit</a> specifically, its usual second line "Tension raised up earlier." gets overridden by the "stolen" line.</p>
+	<p>Begins with the standard "&lt;Character&gt; used &lt;ITEM&gt;" message for each item. For the <a href="#tensionbit">Tension Bit</a> specifically, its usual second line "Tension raised up earlier." gets overridden by the "stolen" line.</p>
 
 	<d-box theme="battlemenu">
-		<d-text asterisk>Susie used the [ITEM]!</d-text>
-		<d-text asterisk>... but it was stolen!</d-text>
+		<d-text asterisk>Susie used the &lt;ITEM&gt;<span class="break"></span>... but it was stolen!</d-text>
 	</d-box>
 	
 	<hr>
