--- a/misc/spells.html
+++ b/misc/spells.html
@@ -3,7 +3,7 @@ title: Spells
 
 description: >
   <p>Descriptions and usage text for special abilities learned and used by the party members. Includes descriptions from the POWER menu.</p>
-  <p>Usage messages including "[Character]" can substitute the names "Susie"/"Ralsei"/"Noelle", depending on who the spell was cast by.</p>
+  <p>Usage messages including "&lt;Character&gt;" can substitute the names "Susie"/"Ralsei"/"Noelle", depending on who the spell was cast by.</p>
 
 credits: >
   <p>Compiled by wovenstarlight.</p>
@@ -120,7 +120,7 @@ toc:
 
 	<h3 id="rudesword-usage">Usage</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] cast RUDE BUSTER!</d-text>
+		<d-text asterisk>&lt;Character&gt; cast RUDE BUSTER!</d-text>
 	</d-box>
 	<p class="note">Deals damage to a single enemy.</p>
 </section>
@@ -152,7 +152,7 @@ toc:
 
 	<h3 id="healprayer-usage">Usage</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] cast HEAL PRAYER!</d-text>
+		<d-text asterisk>&lt;Character&gt; cast HEAL PRAYER!</d-text>
 	</d-box>
 	<p class="note">Heals a single party member.</p>
 </section>
