--- a/encounters/hathy.html
+++ b/encounters/hathy.html
@@ -360,7 +360,7 @@ toc:
 
 	<h3 id="manual-ft">Flavor text</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] read the MANUAL!</d-text>
+		<d-text asterisk>&lt;Character&gt; read the MANUAL!</d-text>
 	</d-box>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Hathy listened politely!</d-text>
