--- a/encounters/rudinn.html
+++ b/encounters/rudinn.html
@@ -318,7 +318,7 @@ toc:
 
 	<h3 id="glowshard-ft">Flavor text</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] used the GLOWSHARD!</d-text>
+		<d-text asterisk>&lt;Character&gt; used the GLOWSHARD!</d-text>
 	</d-box>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Rudinn became enraptured!</d-text>
@@ -334,7 +334,7 @@ toc:
 
 	<h3 id="manual-ft">Flavor text</h3>
 	<d-box theme="battlemenu">
-		<d-text asterisk>[Character] read the MANUAL!</d-text>
+		<d-text asterisk>&lt;Character&gt; read the MANUAL!</d-text>
 	</d-box>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Rudinn was <span class="blue">bored to tears</span>!</d-text>
