--- a/encounters/index.html
+++ b/encounters/index.html
@@ -224,7 +224,9 @@ items:
           -
             url: missmizzle
             name: Miss Mizzle
-          # Hammer of Justice
+          -
+            url: hammerofjustice
+            name: Hammer of Justice
       -
         name: 2nd Sanctuary
         sublist:
