Document Watercooler/Moonwarmer encounters
Also update Miss Mizzle's dialogue to match

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -180,7 +180,10 @@ items:
       -
         name: Green Room
         sublist:
-          # Watercooler, Zapper
+          -
+            url: watercooler
+            name: Watercooler
+          # Zapper
           -
             url: shadowmantleholder
             name: Shadow Mantle holder
@@ -272,4 +275,7 @@ items:
           -
             url: placeholder
             name: Placeholder enemy
+          -
+            url: moonwarmer
+            name: Moonwarmer
 ---
