--- a/encounters/missmizzle.html
+++ b/encounters/missmizzle.html
@@ -192,12 +192,13 @@ toc:
 
 	<h3 id="dialogue-standard">Standard</h3>
 	<h4 id="dialogue-standard-holywatercooler">As HolywaterCooler</h4>
-	<p class="note">This first line is forced on the first turn of the encounter (unless overridden by <a href="#dialogue-fight">dialogue for being attacked</a>), and joins the randomly-chosen pool on subsequent turns with a doubled chance of occurring (around 14.28% instead of 7.14%):</p>
+	<p class="note">Forced on the first turn of the encounter (unless overridden by <a href="#dialogue-fight">dialogue for being attacked</a>), and joins the randomly-chosen pool on subsequent turns with a double chance of occurring:</p>
 	<d-box theme="battletalk">
 		<d-speaker>HolywaterCooler</d-speaker>
 		<d-text>Buble</d-text>
 	</d-box>
 	<hr class="hr2">
+	<p class="note">Double chance:</p>
 	<d-box theme="battletalk">
 		<d-speaker>HolywaterCooler</d-speaker>
 		<d-text>Bubie</d-text>
@@ -241,16 +242,6 @@ toc:
 	<d-box theme="battletalk">
 		<d-speaker>HolywaterCooler</d-speaker>
 		<d-text>Bobie</d-text>
-	</d-box>
-	<hr class="hr2">
-	<d-box theme="battletalk">
-		<d-speaker>HolywaterCooler</d-speaker>
-		<d-text>Buble</d-text>
-	</d-box>
-	<hr class="hr2">
-	<d-box theme="battletalk">
-		<d-speaker>HolywaterCooler</d-speaker>
-		<d-text>Bubie</d-text>
 	</d-box>
 	<hr class="hr2">
 	<d-box theme="battletalk">
