Correct LoT-encounters anchor links

--- a/encounters/shadowguy.html
+++ b/encounters/shadowguy.html
@@ -141,7 +141,7 @@ Unused encounters with blank text:
 
 	<h3 id="ft-standard">Standard</h3>
 	<h4>During Legend of Tenna boards with Tenna present</h4>
-	<p class="note">Uses the <a href="{{ '/encounters/legendoftenna#flavortext-between' | relative_url }}">Legend of Tenna-specific flavor text</a>.</p>
+	<p class="note">Uses the <a href="{{ '/encounters/legendoftenna#betweenturns' | relative_url }}">Legend of Tenna-specific flavor text</a>.</p>
 
 	<h4>In the rest of TV World</h4>
 	<d-box theme="battlemenu">
@@ -215,7 +215,6 @@ Unused encounters with blank text:
 		<d-text asterisk>SHADOWGUY - AT <img src="{{ '/assets/images/story/talkshadowguy/sharp.png' | relative_url }}" alt="♯" style="height: 0.8em; vertical-align: baseline;" /> DF <img src="{{ '/assets/images/story/talkshadowguy/flat.png' | relative_url }}" alt="♭" style="height: 0.8em; vertical-align: baseline;" /></d-text>
 		<d-text asterisk>The "Sharpshoot" act can shoot many things!</d-text>
 	</d-box>
-
 </section>
 
 <section class="d-section" id="boogie">
