--- a/encounters/pippins.html
+++ b/encounters/pippins.html
@@ -121,7 +121,7 @@ Unused encounters with blank text:
 
 	<h3 id="ft-standard">Standard</h3>
 	<h4>During Legend of Tenna boards with Tenna present</h4>
-	<p class="note">Uses the <a href="{{ '/encounters/legendoftenna#flavortext-between' | relative_url }}">Legend of Tenna-specific flavor text</a>.</p>
+	<p class="note">Uses the <a href="{{ '/encounters/legendoftenna#betweenturns' | relative_url }}">Legend of Tenna-specific flavor text</a>.</p>
 
 	<h4>In the rest of TV World</h4>
 	<d-box theme="battlemenu">
