Shadowguy encounter: Add MPA attack text

--- a/encounters/shadowguy.html
+++ b/encounters/shadowguy.html
@@ -57,6 +57,13 @@ toc:
     id: dialogue
     name: General dialogue
   -
+    id: attacks
+    name: Attacks
+    subheadings:
+      -
+        id: mpa
+        name: Censored by the MPA
+  -
     name: ACTs
     subheadings:
       -
@@ -191,6 +198,16 @@ Unused encounters with blank text:
 	<h2>General dialogue</h2>
 	
 	<p>No dialogue; Shadowguys do not talk.</p>
+</section>
+
+<section class="d-section" id="attacks">
+	<h2>Attacks</h2>
+
+	<h3 id="mpa">Censored by the MPA</h3>
+	<p class="note">This attack generates no bullets. Instead, a black censor box covers part of the bullet board, labelled with the following:</p>
+	<d-box theme="plain">
+		<d-text class="fnt-combat" style="justify-self: center">This bullet pattern has<span class="break"></span> been censored by the<span class="break"></span> MPA.</d-text>
+	</d-box>
 </section>
 
 <section class="d-section" id="check">
