Gerson encounter: Add FT name to TOC

--- a/encounters/hammerofjustice.html
+++ b/encounters/hammerofjustice.html
@@ -34,7 +34,7 @@ credits: >
 toc:
   -
     id: flavortext
-    name: 
+    name: General flavor text
     subheadings:
       -
         id: encounter
