Document Zapper encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -183,7 +183,9 @@ items:
           -
             url: watercooler
             name: Watercooler
-          # Zapper
+          -
+            url: zapper
+            name: Zapper
           -
             url: shadowmantleholder
             name: Shadow Mantle holder
